# SOMA

./: .gitignore  CMakeLists.txt  Cargo.toml  test_rebuild.sh
soma/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  setup.py
src/: CMakeLists.txt  Soma.cpp  Soma.h  decl.pxd  decl.pyx  lib.rs  setup.py  soma.pxd  soma.py  soma.pyx
tests/: test_package_loads.py  test_visualisation.py
